<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_home_pager_not_selected"
        android:title="@string/nav_title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_knowledge_hierarchy"
        android:enabled="true"
        android:icon="@drawable/icon_knowledge_hierarchy_not_selected"
        android:title="@string/nav_title_knowledge_hirearchy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_navigation"
        android:enabled="true"
        android:icon="@drawable/icon_navigation_not_selected"
        android:title="@string/nav_title_navigation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_project"
        android:enabled="true"
        android:icon="@drawable/icon_project_not_selected"
        android:title="@string/nav_title_project"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_me"
        android:enabled="true"
        android:icon="@drawable/icon_me_not_selected"
        android:title="@string/nav_title_me"
        app:showAsAction="ifRoom" />

</menu>
